compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__duplicate_custom_type_names.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "record DupType { A } record DupType { B }"
---
error: Duplicate type definition
  ┌─ /src/one/two.rakun:1:1
  │
1 │ record DupType { A } record DupType { B }
  │ ^^^^^^^^^^^^^^       ^^^^^^^^^^^^^^ Redefined here
  │ │                     
  │ First defined here

The type `DupType` has been defined multiple times.
Names in a Rakun module must be unique so one will need to be renamed.
